--- a/www/less/login.less
+++ b/www/less/login.less
@@ -7,64 +7,11 @@ form.login-wrapper {
     color: #000;
     text-align: center;
   }
-  
-  .vr {
-    display: inline;
-    height: 100%;
-    width: 1px;
-    border: 1px inset;
-    margin: 5px;
-    position: absolute;
-    opacity: 0.35;
-  }
-  
-  .actions {
-    margin: 0.5em 0;
-  }
-  
-  div.sso-wrapper {
-    margin-left: -1.5em;
-    background: none;
-    
-    a {
-      margin-left: 1em;
-      color: #FFF;
-    }
-    
-    .facebook {
-      background: #3b5998;
-    }
-    
-    .twitter {
-      background: #00aced;
-    }
-  }
 }
 
 div.registration {
   form {
     margin-top: 1em;
-    
-    .nav-arrow {
-      top: 0;
-      width: 1.5em;
-      height: 90%;
-      position: absolute;
-      background: lightgreen;
-      
-      div {
-        color: #000;
-        margin: 4.5em -0.25em;
-      }
-      
-      &.previous-arrow {
-        left: 1em;
-      }
-      
-      &.next-arrow {
-        right: 1em;
-      }
-    }
     
     .page-1 {
       margin-right: 2em;
@@ -73,5 +20,9 @@ div.registration {
     .page-2 {
       margin-left: 2em;
     }
+  }
+  
+  .extra-space {
+    margin-top: 0.5em;
   }
 }
