--- a/www/less/nutrition.less
+++ b/www/less/nutrition.less
@@ -131,6 +131,14 @@
               div:last-child {
                 text-align: center;
               }
+              
+              .has-eaten-serving {
+                color: green;
+              }
+              
+              .add-eaten-serving {
+                color: #3071a9;
+              }
             }
           }
         }
