--- a/www/partials/Dashboard.html
+++ b/www/partials/Dashboard.html
@@ -24,12 +24,20 @@
             </a>
         </div>
         
-        <div class="col-xs-4">
+        <div class="col-xs-4" ng-mousedown="EnforceLogin($event, 'Please login before using the pedometer.')">
             <a href="#/exercise" class="util">
-                <span class="fa fa-5x fa-bicycle"></span>
-                <h4>Move More</h4>
+                <span class="fa fa-5x fa-forward"></span>
+                <h4>Pedometer</h4>
+            </a>
+        </div>
+        
+        <div class="col-xs-4">
+            <a href="#/board" class="util">
+                <span class="fa fa-5x fa-list"></span>
+                <h4>Leaderboards</h4>
             </a>
         </div>
     </div>
+    
     
 </div>
