--- a/www/partials/Nutrition/lookup.html
+++ b/www/partials/Nutrition/lookup.html
@@ -9,30 +9,8 @@
         </span>
     </div>
     
-    <!--
-    <form class="search-input">
-        <label class="sr-only" for="nutrition-search">Search</label>
-        <input ng-model="search" id="nutrition-search" type="text" placeholder="Lookup Ingredients - (i.e. 'chicken')" />
-        
-        <button class="well-sm" ng-click="doLookup()">Search</button>
-    </form>
-    -->
-    
     <form class="form-inline form-search">
         <div class="form-group">
-            <!--
-            <div class="row">
-                <div class="col-xs-10">
-                    
-                </div>
-                
-                
-                <div class="col-xs-2">
-                    <button class="btn btn-sm btn-primary" ng-click="doLookup()">Search</button>
-                </div>
-            </div>
-            -->
-            
             <label class="sr-only" for="nutrition-search">Search</label>
             <input ng-model="search" class="form-control" id="nutrition-search" type="text" placeholder="Lookup Food - (i.e. 'chicken')" ng-keypress="$event.keyCode == 13 ? doLookup() : void();" />
         </div>
@@ -42,15 +20,10 @@
         <h4 ng-hide="!resultSet && !isSearching">Results</h4>
         
         <ul class="results well" ng-hide="!resultSet">
-            <li class="row result swipe-able" ng-repeat="food in resultSet" ng-class-even="'list-alt'">
-                <div class="col-xs-12" ng-init="food.closed = true; food.swiping = false; food.show_add = false;">
-                    <div class="row item-display" ng-swipe-right="food.swiping = true; food.show_add = true; console.log('swipe');" ng-swipe-left="food.swiping = true; food.show_add = false;">
-                        <div class="col-xs-2 food-eaten-wrapper" ng-show="food.show_add">
-                            <button type="button" class="btn btn-sm btn-info"    ng-show="!food.has_eaten" ng-click="AddToEaten($event, food)">Add</button>
-                            <button type="button" class="btn btn-sm btn-success disabled" ng-show="food.has_eaten">Added!</button>
-                        </div>
-                        
-                        <div class="name-wrapper" ng-click="food.swiping = false;" ng-mouseup="food.closed = food.swiping ? food.closed : !food.closed" ng-class="{'col-xs-10': !food.show_add, 'col-xs-8': food.show_add}">
+            <li data-food-id="{{food.food_id}}" class="row result swipe-able" ng-repeat="food in resultSet" ng-class-even="'list-alt'">
+                <div class="col-xs-12" ng-init="food.closed = true; food.swiping = false;">
+                    <div class="row item-display" ng-swipe-right="food.swiping = true;" ng-swipe-left="food.swiping = true;">
+                        <div class="col-xs-10 name-wrapper" ng-click="food.swiping = false;" ng-mouseup="food.closed = food.swiping ? food.closed : !food.closed">
                             <h4>
                                 {{food.name}} <span ng-hide="food.closed">{{food.name_meta}}</span>
                             </h4>
@@ -80,12 +53,6 @@
                                 <span ng-show="!food.hide_servings">Hide Servings</span>
                                 <span ng-show="food.hide_servings">Show Servings</span>
                             </a>
-                            
-                            <!--
-                            <a ng-click="food.hide_servings = false;" ng-hide="!food.servings || !food.hide_servings" class="toggle btn btn-default">
-                                Show Servings
-                            </a>
-                            -->
                         </div>
                         
                         <div class="col-xs-6">
@@ -99,25 +66,25 @@
                     <div class="servings-wrapper" ng-hide="food.closed || food.hide_servings">
                         <ul id="servings-{{food.food_id}}" class="servings" ng-hide="!food.servings || food.hide_servings">
                             <li class="headings row">
-                                <div class="col-xs-5">
-                                    Portion
-                                </div>
-                                
-                                <div class="col-xs-5">
-                                    Description
-                                </div>
-                                
-                                <div class="col-xs-2">
-                                    Cal.
-                                </div>
+                                <div class="col-xs-5">Portion</div>
+                                <div class="col-xs-5">Description</div>
+                                <div class="col-xs-2">Cal.</div>
                             </li>
                             
                             <li class="serving row" ng-repeat="serving in food.servings" ng-class-even="'list-alt'">
+                                <!--
                                 <div class="col-xs-5">
                                     <a href="{{serving.serving_url}}">
                                         <span class="fa fa-external-link"></span>
                                         {{serving.name}}
                                     </a>
+                                </div>
+                                -->
+                                
+                                
+                                <div class="col-xs-5">
+                                    <user-eaten-button></user-eaten-button>
+                                    {{serving.name}}
                                 </div>
                                 
                                 <div class="description col-xs-5">
