Fixed a double click issue that's plauged me from the start. Upgraded AngularJS. Added top navigation bar. Added Pagination.

--- a/www/less/core.less
+++ b/www/less/core.less
@@ -1,4 +1,5 @@
 @import "app-nav.less";
+@import "app-top-nav.less";
 
 body {
   color: #FFF;
@@ -23,6 +24,10 @@ body {
   }
   
   div.container-fluid {
+    .pagination-wrapper {
+      text-align: center;
+    }
+    
     .row {
       margin: 0;
     }
