--- a/www/less/history.less
+++ b/www/less/history.less
@@ -37,6 +37,17 @@
           margin-bottom: 0.5em;
         }
       }
+      
+      .total {
+        hr {
+          width: 80%;
+          margin: 0;
+        }
+        
+        .total-calories {
+          text-align: right;
+        }
+      }
     }
   }
 }
