--- a/www/less/login.less
+++ b/www/less/login.less
@@ -7,6 +7,10 @@ form.login-wrapper {
     color: #000;
     text-align: center;
   }
+  
+  .actions {
+    margin-top: 0.75em;
+  }
 }
 
 div.registration {
