--- a/www/partials/Board/board.html
+++ b/www/partials/Board/board.html
@@ -1,4 +1,6 @@
 <div class="board-wrapper" ng-controller="BoardCtrl">
+    <app-nav-top></app-nav-top>
+    
     <ul class="board-list">
         <li class="board-list-headers">
             <div class="row">
@@ -18,4 +20,6 @@
         
         <board-user-item></board-user-item>
     </ul>
-</div> 
+    
+    <loader></loader>
+</div>
