--- a/www/partials/History/HistoryMealWrapper.html
+++ b/www/partials/History/HistoryMealWrapper.html
@@ -20,4 +20,17 @@
             {{ meal.calories }}
         </div>
     </li>
+    
+    <li class="row total">
+        <hr/>
+        
+        <div class="col-xs-10">
+            <h5>Total:</h5>
+        </div>
+        
+        <div class="col-xs-2 total-calories">
+            <h5>{{totals[day_idx]}}</h5>
+        </div>
+    </li>
 </ul>
+
