--- a/www/partials/Location/nutrition-links.html
+++ b/www/partials/Location/nutrition-links.html
@@ -7,8 +7,8 @@
                 </a>
             </li>
             
-            <li class="row" ng-init="clicked = false;">
-                <a href="#/history/nutrition" class="col-xs-12" data-clicked="{{ clicked }}" ng-mousedown="clicked ? $event.preventDefault() : clicked = true;">
+            <li class="row">
+                <a href="#/history/nutrition" class="col-xs-12">
                     Calorie History
                 </a>
             </li>
