--- a/www/partials/Dashboard.html
+++ b/www/partials/Dashboard.html
@@ -20,7 +20,7 @@
         <div class="col-xs-4">
             <a href="#/nutrition" class="util">
                 <span class="fa fa-5x fa-cutlery"></span>
-                <h4>Eat Better</h4>
+                <h4>Nutrition</h4>
             </a>
         </div>
         
