Added overlay for certain flows. Removed styling from previous project. Added the top-nav bar.

--- a/www/less/board.less
+++ b/www/less/board.less
@@ -1,15 +1,13 @@
 
 
 .board-wrapper {
-  a {
-    color: #000;
-  }
-  
   .board-list {
-    //text-align: center;
-    
     .board-list-headers {
-      background: #00ABEF;
+      
+      hr {
+        width: 90%;
+        margin-top: 0;
+      }
     }
     
     .board-user {
