--- a/www/less/dashboard.less
+++ b/www/less/dashboard.less
@@ -1,7 +1,6 @@
 div.main-content {
   .dash-wrapper {
     .stats {
-      //color: rgb(246, 99, 51);
       background: #FFF;
       margin: 0.25em 0.5em;
       text-align: center;
@@ -33,7 +32,7 @@ div.main-content {
       margin-top: 1em;
       
       .util {
-        color: #FFF;
+        color: #000;
       }
       
       a.util:hover {
