--- a/www/less/login.less
+++ b/www/less/login.less
@@ -13,6 +13,16 @@ form.login-wrapper {
   }
 }
 
+#overlay-message {
+  &.modal {
+    width: 50%;
+  }
+  
+  .syf-loader {
+    padding: 1em;
+  }
+}
+
 div.registration {
   form {
     margin-top: 1em;
