--- a/www/partials/History/template.html
+++ b/www/partials/History/template.html
@@ -9,7 +9,7 @@
         This user hasn't tracked their eating habits.
     </div>
     
-    <ul class="date-list" ng-init="LoadHistory();">
+    <ul class="date-list list" ng-init="LoadHistory();">
         <history-date-wrapper></history-date-wrapper>
     </ul>
     
