--- a/www/partials/Login/register.html
+++ b/www/partials/Login/register.html
@@ -66,7 +66,7 @@
                 />
             </div>
             
-            <div class="form-group">
+            <div class="form-group hidden">
                 <div class="checkbox">
                     <label>
                         <input id       = "show-password"
