Comitting before adding Gulp.

--- a/www/partials/Exercise/utility.html
+++ b/www/partials/Exercise/utility.html
@@ -6,7 +6,7 @@
             Start!
         </button>
         
-        <button class="btn btn-lg btn-warning" ng-show="Pedometer.isTracking()">
+        <button id="stop-pedometer" class="btn btn-lg btn-warning" ng-show="Pedometer.isTracking()">
             Stop!
         </button>
     </div>
