Bug fixes and performance  improvements.

--- a/www/partials/Board/board.html
+++ b/www/partials/Board/board.html
@@ -1,4 +1,4 @@
-<div class="board-wrapper" ng-controller="BoardCtrl">
+<div class="board-wrapper">
     <app-nav-top></app-nav-top>
     
     <ul class="board-list list">
