--- a/www/partials/Exercise/utility.html
+++ b/www/partials/Exercise/utility.html
@@ -1,4 +1,4 @@
-<div class="pedometer-wrapper" ng-controller="PedometerCtrl">
+<div class="pedometer-wrapper">
     <app-nav-top></app-nav-top>
     
     <div class="pedo-button" ng-mousedown="EnforceLogin($event, 'Please login before using the pedometer.')" ng-click="ToggleTracking()">
