--- a/www/partials/History/template.html
+++ b/www/partials/History/template.html
@@ -1,4 +1,4 @@
-<div class="history" ng-controller="HistoryCtrl">
+<div class="history">
     <app-nav-top></app-nav-top>
     
     <div class="user-history-name">
