--- a/www/partials/Location/exercise-links.html
+++ b/www/partials/Location/exercise-links.html
@@ -1,4 +1,4 @@
-<div class="link-utility-grouping" ng-controller="LocationCtrl">
+<div class="link-utility-grouping">
     <nav class="navbar" role="navigation">
         <ul class="nav navbar-nav exercise-links">
             <li class="row" ng-click="EnforceLogin($event, 'Please login to use the pedometer.')">
