--- a/www/partials/Nutrition/lookup.html
+++ b/www/partials/Nutrition/lookup.html
@@ -1,4 +1,4 @@
-<div ng-controller="NutritionCtrl" class="nutrition-wrapper">
+<div class="nutrition-wrapper">
     <div ng-hide="!userError" class="error-wrapper bg-warning">
         <span ng-hide="userError != 1">
             Invalid input! Please enter something into the search field.
