--- a/www/partials/Location/nutrition-links.html
+++ b/www/partials/Location/nutrition-links.html
@@ -1,4 +1,4 @@
-<div class="link-utility-grouping" ng-controller="LocationCtrl">
+<div class="link-utility-grouping">
     <nav class="navbar" role="navigation">
         <ul class="nav navbar-default exercise-links">
             <li class="row">
