--- a/www/partials/Login/login.html
+++ b/www/partials/Login/login.html
@@ -1,4 +1,4 @@
-<form class="login-wrapper" name="credentials" ng-controller="LoginCtrl">
+<form class="login-wrapper" name="credentials">
     <div class="message-wrapper warning well-sm" ng-hide="!message">
         {{message}}
     </div>
