--- a/www/partials/Login/register.html
+++ b/www/partials/Login/register.html
@@ -1,15 +1,8 @@
-<div ng-controller="LoginCtrl" class="registration">
-    <form name="frm" role="form" ng-submit="doRegistration()">
-        <!--
-        <div class="nav-arrow previous-arrow well-sm" ng-show="page > 1">
-            <div class="fa fa-arrow-left" ng-click="page = page - 1"></div>
-        </div>
-        -->
-        
+<div class="registration">
+    <form name="frm" role="form" ng-submit="doRegistration()" ng-model-options = "{ updateOn: 'blur' }">
         <div class="page-1" ng-show="page < 2">
             <div class="form-group">
                 <label for="username" class="sr-only">Username:</label>
-                
                 <input id          = "username"
                        type        = "text"
                        class       = "form-control"
@@ -19,62 +12,22 @@
                 />
             </div>
             
-            <div class="form-group" ng-switch="show_pass">
-                <label for="password" class="sr-only">Password:</label>
-                <input id               = "password"
-                       name             = "password"
-                       type             = "text"
-                       class            = "form-control"
-                       placeholder      = "Password"
-                       ng-model         = "user.password"
-                       ng-minlength     = "6"
-                       ng-maxlength     = "100"
-                       ng-switch-when   = "true"
-                       ng-model-options = "{ updateOn: 'blur' }"
-                       required
-                />
-                
-                <input id               = "password"
-                       name             = "password"
-                       type             = "password"
-                       class            = "form-control"
-                       placeholder      = "Password"
-                       ng-model         = "user.password"
-                       ng-minlength     = "6"
-                       ng-maxlength     = "100"
-                       ng-switch-when   = "false"
-                       ng-model-options = "{ updateOn: 'blur' }"
+            <div class="form-group">
+                <label for="password" class="sr-only">Type your password:</label>
+                <input id           = "password"
+                       name         = "password"
+                       type         = "password"
+                       class        = "form-control"
+                       placeholder  = "Password"
+                       ng-model     = "user.password"
+                       ng-minlength = "6"
+                       ng-maxlength = "100"
                        required
                 />
                 
                 <p class="help-block bg-warning well-sm" ng-show="frm.password.$error.minlength || frm.password.$error.maxlength">
                     Please ensure you're password contains 6 characters.
                 </p>
-            </div>
-            
-            <div class="form-group" ng-show="!show_pass">
-                <label for="password2" class="sr-only">Retype your password:</label>
-                <input id           = "password2"
-                       name         = "password2"
-                       type         = "password"
-                       class        = "form-control"
-                       placeholder  = "Confirm password"
-                       ng-model     = "user.password2"
-                       ng-minlength = "6"
-                       ng-maxlength = "100"
-                       ng-required  = "{{!show_pass}}"
-                />
-            </div>
-            
-            <div class="form-group hidden">
-                <div class="checkbox">
-                    <label>
-                        <input id       = "show-password"
-                               type     = "checkbox"
-                               ng-model = "show_pass"
-                        /> Show Password
-                    </label>
-                </div>
             </div>
             
             <div class="form-group">
@@ -102,11 +55,14 @@
             </div>
         </div>
         
+        
+        
+        
         <div class="page-2" ng-show="page == 2">
             <div class="form-group">
                 <label for="sex" class="sr-only">Sex:</label>
                 
-                <select id="sex" name="sex" class="form-control" ng-model="user.sex">
+                <select id="sex" name="sex" class="form-control" ng-model="user.sex" required="required">
                     <option value="" disabled selected>Select your sex...</option>
                     <option value="1">Male</option>
                     <option value="0">Female</option>
@@ -159,7 +115,7 @@
             <div class="form-group">
                 <label for="school" class="sr-only">School:</label>
                 
-                <select id="school" name="school_id" class="form-control" ng-model="user.school_id">
+                <select id="school" name="school_id" class="form-control" ng-model="user.school_id" required="required">
                     <option value="" disabled selected>Select the school you attend...</option>
                     <option value="{{school.id}}" ng-repeat="school in schools">{{school.name}}</option>
                 </select>
@@ -168,7 +124,7 @@
             <div class="form-group">
                 <label for="group" class="sr-only">Group:</label>
                 
-                <select id="group" name="group_id" class="form-control" ng-model="user.group_id">
+                <select id="group" name="group_id" class="form-control" ng-model="user.group_id" required="required">
                     <option value="" disabled selected>Select the group you were assigned to...</option>
                     <option value="{{group.id}}" ng-repeat="group in groups">{{group.name}}</option>
                 </select>
@@ -203,12 +159,12 @@
         
         
         <div class="btn-group btn-group-justified" ng-class="{'extra-space': page > 2}">
-            <div class="btn button btn-warning" ng-click="page = page - 1;" ng-class="{'disabled': page < 2}">
-                Prev
+            <div id="previous" class="btn button btn-warning" ng-click="page = page - 1;" ng-class="{'disabled': page < 2}">
                 <span class="fa fa-arrow-left"></span>
+                Prev
             </div>
             
-            <div class="btn button btn-primary" ng-click="page = page + 1;" ng-class="{'disabled': page > 2}">
+            <div id="next" class="btn button btn-primary" ng-click="page = page + 1; pageIsValid(this)" ng-class="{'disabled': page > 2}">
                 Next
                 <span class="fa fa-arrow-right"></span>
             </div>
