Upgraded to Cordova v5. Moved some code around so that the AppCtrl wouldn't be so large. Fixed an annoying login flow issue when the user attempted to access a feature that required a valid login.

--- a/resources/less/board.less
+++ b/resources/less/board.less
@@ -27,6 +27,14 @@
       .initials, .points {
         text-align: center;
       }
+      
+      .rank {
+        color: #000;
+        
+        &:hover {
+          color: #000;
+        }
+      }
     }
   }
 }
