--- a/resources/less/dashboard.less
+++ b/resources/less/dashboard.less
@@ -33,11 +33,15 @@ div.main-content {
       
       .util {
         color: #000;
-      }
-      
-      a.util:hover {
-        color: lightgreen;
-        text-decoration: none;
+        
+        &:hover {
+          color: lightgreen;
+          text-decoration: none;
+        }
+        
+        .leaderboard {
+          font-size: 1.2em;
+        }
       }
     }
   }
