--- a/www/partials/components/TopNav.html
+++ b/www/partials/components/TopNav.html
@@ -16,7 +16,7 @@
                     </a>
                 </li>
                 
-                <li class="col-xs-3" ng-class="{'active':'/exercise' == $location.path()}" ng-mousedown="EnforceLogin($event, 'Please login before using the pedometer.')">
+                <li class="col-xs-3" ng-class="{'active':'/exercise' == $location.path()}">
                     <a href="#/exercise">
                         <span class="fa fa-fast-forward"></span>
                         <span class="hidden-xs">Exercise</span>
