--- a/resources/less/app-nav.less
+++ b/resources/less/app-nav.less
@@ -2,6 +2,7 @@ div.app-nav-wrapper {
   background: #000;
   position: absolute;
   left: -50%;
+  height: 100%;
   
   nav.app-nav {
     font-size: 1.15em;
