--- a/www/partials/Dashboard.html
+++ b/www/partials/Dashboard.html
@@ -1,4 +1,5 @@
 <div class="dash-wrapper">
+    <app-nav-top></app-nav-top>
     
     <div class="row stats well" ng-hide="!EnsureValidUser()">
         <div class="col-xs-4">
@@ -36,7 +37,7 @@
         <div class="col-xs-4">
             <a href="#/board" class="util">
                 <span class="fa fa-5x fa-list"></span>
-                <h4>Leaderboards</h4>
+                <h4 class="leaderboard">Leaderboards</h4>
             </a>
         </div>
     </div>
