--- a/www/partials/Login/login.html
+++ b/www/partials/Login/login.html
@@ -15,7 +15,7 @@
                 Login
             </button>
             
-            <a class="btn btn-block btn-info" href="#/account/register">Register</a>
+            <a class="btn btn-block btn-info" ng-href="#/account/register">Register</a>
         </div>
     </div>
 </form>
