--- a/www/partials/Login/login.html
+++ b/www/partials/Login/login.html
@@ -8,7 +8,7 @@
         <input id="username" type="text" class="form-control" placeholder="Username" ng-model="credentials.username" />
         
         <label for="password" class="sr-only">Password</label>
-        <input id="password" type="text" class="form-control" placeholder="Password" ng-model="credentials.password" />
+        <input id="password" type="password" class="form-control" placeholder="Password" ng-model="credentials.password" />
         
         <div class="actions">
             <button type="submit" class="btn btn-block btn-primary" ng-click="doLogin(this)">
